Fix card css for flex wrap and include nicer shadows.

--- a/travelogue-web/src/App.css
+++ b/travelogue-web/src/App.css
@@ -70,6 +70,7 @@ Website Standard Style Sheet css
 
 .card-shadow {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  transition: 0.3s;
 }
 
 .card-shadow:hover {
