--- a/travelogue-web/src/Components/Home/SavedTrips/SavedTrips.css
+++ b/travelogue-web/src/Components/Home/SavedTrips/SavedTrips.css
@@ -4,6 +4,7 @@
     width: 100vw;
     max-width: 100vw;
     height: 100vh;
+    
 }
 .saved-header {
     display: flex;
@@ -31,6 +32,8 @@
     height: auto;
     display: flex;
     justify-content: center;
+    text-align: left;
+    flex-wrap: wrap;
 }
 .saved-activity-card {
     width: 10vw;
